# dss

./: README.md  pyproject.toml
data/: arrivals.csv  doctors.csv  patients.csv
docs/: allocation.md  architecture.md  data_generation.md  preferences.md  scheduling.md  staffing.md
src/dss/: __init__.py  allocation.py  cli.py  config.py  data_generation.py  data_generation_nb.py  models.py  scheduling.py  simulation.py  staffing.py  visualize.py
