[project]
name = "dss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AllanJin", email = "yosozura@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.scripts]
dss = "dss:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
